compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__case13.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 2.22, 1, \"three\" { x, _, y if x >=. y -> 1 }"
---
----- SOURCE CODE
case 2.22, 1, "three" { x, _, y if x >=. y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:42
  │
1 │ case 2.22, 1, "three" { x, _, y if x >=. y -> 1 }
  │                                          ^

Expected type:

    Float

Found type:

    String

error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:1:1
  │
1 │ case 2.22, 1, "three" { x, _, y if x >=. y -> 1 }
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _, _, _
